| Bug #40921 | Incorrectly handle resource shortage during create/drop DD object | ||
|---|---|---|---|
| Submitted: | 21 Nov 2008 10:39 | Modified: | 21 Nov 2008 13:15 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[21 Nov 2008 10:39]
Jonas Oreland
[21 Nov 2008 10:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/59498 2748 Jonas Oreland 2008-11-21 ndb - bug#40921 - release transaction if failing during create_file(group)_req
[21 Nov 2008 10:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/59499 2750 Jonas Oreland 2008-11-21 ndb - bug#40921 - release transaction if failing during create_file(group)_req
[21 Nov 2008 11:06]
Bugs System
Pushed into 5.1.29-ndb-6.2.17 (revid:jonas@mysql.com-20081121105105-lyg2j76b53c8o7tv) (version source revid:jonas@mysql.com-20081121105105-lyg2j76b53c8o7tv) (pib:5)
[21 Nov 2008 11:07]
Bugs System
Pushed into 5.1.29-ndb-6.3.19 (revid:jonas@mysql.com-20081121105105-lyg2j76b53c8o7tv) (version source revid:jonas@mysql.com-20081121110245-l66mz59ub1dda4kg) (pib:5)
[21 Nov 2008 11:09]
Bugs System
Pushed into 5.1.29-ndb-6.4.0 (revid:jonas@mysql.com-20081121105105-lyg2j76b53c8o7tv) (version source revid:jonas@mysql.com-20081121110436-16ok7hr8ng4gxea1) (pib:5)
[21 Nov 2008 13:15]
Jon Stephens
Documented bugfix in the NDB-6.2.17 and 6.3.19 changelogs as follows:
Issuing concurrent CREATE TABLESPACE, ALTER TABLESPACE, CREATE
LOGFILE GROUP, or ALTER LOGFILE GROUP statements on separate SQL
nodes caused a resource leak that led to data node crashes when
these statements were used again later.
[12 Dec 2008 23:26]
Bugs System
Pushed into 6.0.9-alpha (revid:jonas@mysql.com-20081121105105-lyg2j76b53c8o7tv) (version source revid:tomas.ulin@sun.com-20081209185954-9svcixh2p5hsfi6w) (pib:5)
