ndb - bug#40921 - release transaction if failing during create_file(group)_req